--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReCorriendoLaHistoria">
         <activity
+            android:name=".ActivityPreguntasOpcionesImagenes"
+            android:exported="true" />
+        <activity
+            android:name=".ActivityPreguntaOpcionesTexto"
+            android:exported="true" />
+        <activity
+            android:name=".ActivityPreguntaVerdaderoFalso"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
