ActivityFormulario y Opciones de imagenes terminada.
Sigue:
pantalla con carta inicio
sistema de codigos para habilitar las preguntas

Cambios Finales:
mejorar el recycler principal

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReCorriendoLaHistoria">
         <activity
+            android:name=".ActivityFormularioParaResultado"
+            android:exported="true" />
+        <activity
             android:name=".ActivityPreguntasOpcionesImagenes"
             android:exported="true" />
         <activity
