Activity terminado pantalla con carta inicio sistema de codigos para habilitar las preguntas
Sigue:
corregir la carga del recycler de las preguntas para mostrar en relacion a los codigos introducidos

Cambios Finales:
mejorar esteticamente el recycler principal

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReCorriendoLaHistoria">
         <activity
+            android:name=".ActivityCartaPresentacion_IngresoCodigo"
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+        <activity
             android:name=".ActivityFormularioParaResultado"
             android:exported="true" />
         <activity
@@ -24,11 +36,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
